--- a/sales.html
+++ b/sales.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Salmon Cookies Sales</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Sales Data</h1>
+    </header>
+    <main>
+        <div id = "locationData">
+
+        </div>
+    </main>
+    <script src = "js/app.js"></script>
 </body>
 </html>
