Adding css styling and linking sales page to home page

--- a/sales.html
+++ b/sales.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salmon Cookies Sales</title>
+    <title>Salmon Cookies Sales</title>  
+    <link rel="stylesheet" href="css/reset.css">   
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
     <header>
-        <h1>Sales Data</h1>
+        <div class = "navbar">
+            <div class="logo-container">
+                <img class="logo" alt="Salmon Cookies Logo" src="img/salmon.png"/>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Orders</a></li>
+                    <li><a href="sales.html">Sales</a></li>  
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div id = "locationData">
