--- a/index.html
+++ b/index.html
@@ -4,9 +4,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salmon Cookies</title>
+    <title>Wireframe</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class = "navbar">
+            <div class="logo-container">
+                <img class="logo" alt="Salmon Cookies Logo" src="img/salmon.png"/>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Orders</a></li>
+                    <li><a href="sales.html">Sales</a></li>  
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="column1">
+                    <h1>
+                        Salmon Cookies
+                    </h1>
+                    <p>
+                        Lore scelerisque mauris pellentesque pulvinar pellentesque. Tempus urna et pharetra pharetra massa. In hac habitasse platea dictumst quisque sagittis purus sit amet. Aliquam vestibulum morbi blandit cursus. Sed risus ultricies tristique nulla aliquet. Vitae elementum curabitur vitae nunc sed velit dignissim sodales ut. Nibh sit amet commodo nulla. Non curabitur gravida arcu ac tortor. Id volutpat lacus laoreet non curabitur gravida arcu. Pretium viverra suspendisse potenti nullam ac. Sit amet mattis vulputate enim nulla aliquet. Mi quis hendrerit dolor magna eget. Arcu non odio euismod lacinia at quis risus. Semper risus in hendrerit gravida rutrum quisque. Leo duis ut diam quam nulla. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Id donec ultrices tincidunt arcu non sodales neque sodales.
+                    </p>
+            </div>
+            <div class="column2">
+                <img src="img/frosted-cookie.jpg" />
+            </div>
+        </section>
+        <div class = "hero">
+            <img src="img/family.jpg"/>
+        </div>
+        <div class="sub-banners">
+            <div class="left">
+                <img src="img/fish.jpg">
+            </div>
+            <div class="middle">
+                <img src="img/cutter.jpeg"/>
+            </div>
+            <div class="right">
+                <img src="img/shirt.jpg" />
+            </div>
+        </div>
+        <section>
+            <div class="column1">
+                <img src="img/chinook.jpg" />
+            </div>
+            <div class="column2">
+                <article>
+                    <h2>
+                        Location Information
+                    </h2>
+                    <br>
+                    <p>Hours: 6am-7pm local time</p>
+                    <br>
+                    <h3>
+                        Seattle
+                    </h3>
+                    <p>
+                        837 Salmon Street 
+                        <br> Seattle, WA 
+                        <br> (555)555-5555
+                    </p>
+                    <br>
+                    <h3>
+                        Tokyo
+                    </h3>
+                    <p>
+                        873 Salmon Street 
+                        <br> Tokyo, Japan 
+                        <br> (555)555-5555
+                    </p>
+                    <br>
+                    <h3>
+                        Dubai
+                    </h3>
+                    <p>
+                        873 Salmon Street 
+                        <br> Dubai, UAE 
+                        <br> (555)555-5555
+                    </p>
+                    <br>
+                    <h3>
+                        Paris
+                    </h3>
+                    <p>
+                        873 Salmon Street 
+                        <br> Paris, France 
+                        <br> (555)555-5555
+                    </p>
+                    <br>
+                    <h3>
+                        Lima
+                    </h3>
+                    <p>
+                        873 Salmon Street 
+                        <br> Lima, Peru 
+                        <br> (555)555-5555
+                    </p>
+                </article>
+                <button>
+                    <a href="sales.html">
+                        Sales Data
+                    </a>
+                </button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        &copy; Salmon Cookies
+    </footer>
 </body>
 </html>
