--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
+    <title>Salmon Cookies</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">   
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -31,30 +32,30 @@
                         Salmon Cookies
                     </h1>
                     <p>
-                        Lore scelerisque mauris pellentesque pulvinar pellentesque. Tempus urna et pharetra pharetra massa. In hac habitasse platea dictumst quisque sagittis purus sit amet. Aliquam vestibulum morbi blandit cursus. Sed risus ultricies tristique nulla aliquet. Vitae elementum curabitur vitae nunc sed velit dignissim sodales ut. Nibh sit amet commodo nulla. Non curabitur gravida arcu ac tortor. Id volutpat lacus laoreet non curabitur gravida arcu. Pretium viverra suspendisse potenti nullam ac. Sit amet mattis vulputate enim nulla aliquet. Mi quis hendrerit dolor magna eget. Arcu non odio euismod lacinia at quis risus. Semper risus in hendrerit gravida rutrum quisque. Leo duis ut diam quam nulla. Volutpat ac tincidunt vitae semper quis lectus nulla at volutpat. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae. Id donec ultrices tincidunt arcu non sodales neque sodales.
+                        In early 2021, our founder Pat set out to create the perfect Seattle treat. By combining two signature Seattle icons, Pat developed a recipe for a coffee-time confection called Salmon Cookies. These cookies aren't just the shape of our beloved aquatic native, they have just a hint of fishy goodness baked in.
                     </p>
             </div>
             <div class="column2">
-                <img src="img/frosted-cookie.jpg" />
+                <img src="img/frosted-cookie.jpg" alt="A frosted salmon shaped cookie"/>
             </div>
         </section>
         <div class = "hero">
-            <img src="img/family.jpg"/>
+            <img src="img/family.jpg" alt="A random happy family"/>
         </div>
         <div class="sub-banners">
             <div class="left">
-                <img src="img/fish.jpg">
+                <img src="img/fish.jpg" alt="Fish cartoon">
             </div>
             <div class="middle">
-                <img src="img/cutter.jpeg"/>
+                <img src="img/cutter.jpeg" alt="A salmon shaped cookie-cutter"/>
             </div>
             <div class="right">
-                <img src="img/shirt.jpg" />
+                <img src="img/shirt.jpg" alt="Cropped image showing the torso of a man wearing a salmon t-shirt"/>
             </div>
         </div>
         <section>
             <div class="column1">
-                <img src="img/chinook.jpg" />
+                <img src="img/chinook.jpg" alt="a chinook salmon"/>
             </div>
             <div class="column2">
                 <article>
@@ -65,7 +66,7 @@
                     <p>Hours: 6am-7pm local time</p>
                     <br>
                     <h3>
-                        Seattle
+                        Salmon Cookies Seattle
                     </h3>
                     <p>
                         837 Salmon Street 
@@ -74,7 +75,7 @@
                     </p>
                     <br>
                     <h3>
-                        Tokyo
+                        Salmon Cookies Tokyo
                     </h3>
                     <p>
                         873 Salmon Street 
@@ -83,7 +84,7 @@
                     </p>
                     <br>
                     <h3>
-                        Dubai
+                        Salmon Cookies Dubai
                     </h3>
                     <p>
                         873 Salmon Street 
@@ -92,7 +93,7 @@
                     </p>
                     <br>
                     <h3>
-                        Paris
+                        Salmon Cookies Paris
                     </h3>
                     <p>
                         873 Salmon Street 
@@ -101,7 +102,7 @@
                     </p>
                     <br>
                     <h3>
-                        Lima
+                        Salmon Cookies Lima
                     </h3>
                     <p>
                         873 Salmon Street 
