--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salmon Cookies Sales</title>  
-    <link rel="stylesheet" href="css/reset.css">   
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">   
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
@@ -34,7 +35,7 @@
         <div class="locationForm">
             <form id="new-location-form">
                 <fieldset>
-                    <legend>Add New Cookie Stand Location</legend>
+                    <legend>Add Salmon Cookies Location</legend>
 
                     <label for="name-input">Store Name:</label>
                     <input type="text" id="name-input" name="storeName" required/>
@@ -48,7 +49,7 @@
                     <label for="min-input">Average Cookies Per Sale:</label>
                     <input type="number" step="0.01" id="avg-input" name="avgCookies" required min=".01"/>
 
-                    <button type="submit">SUBMIT</button>   
+                    <button type="submit">Submit</button>   
                 </fieldset>             
             </form>
         </div>
