--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">   
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/salmon.png"/>
 </head>
 <body>
     <header>
