--- a/sales.html
+++ b/sales.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salmon Cookies Sales</title>  
+    <title>Salmon Cookies</title>  
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">   
     <link rel="stylesheet" href="css/style.css"> 
+    <link rel="icon" type="image/png" href="img/salmon.png"/>
 </head>
 <body>
     <header>
